--- a/WowHacking.vcxproj
+++ b/WowHacking.vcxproj
@@ -127,7 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Utils.cpp" />
+    <ClCompile Include="WorldRareVisionHack.cpp" />
     <ClCompile Include="WowHacking.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Utils.h" />
+    <ClInclude Include="WorldRareVisionHack.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="WowHacking.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
