--- a/WowHacking.vcxproj.filters
+++ b/WowHacking.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Utils.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="MemoryHacks.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WorldRareVisionHack.h">
@@ -33,6 +36,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="MemoryHacks.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
